# rkvac-protocol

./: CMakeLists.txt  README.md  main.c
cmake/Modules/: FindMCL.cmake
config/: config.h
include/: attributes.h  system.h  types.h
include/models/: issuer.h  revocation-authority.h  user.h  verifier.h
include/multos/: apdu.h
lib/apdu/: command.h
lib/helpers/: hash_helper.c  hash_helper.h  hex_helper.h  mcl_helper.h  multos_helper.h
lib/pcsc/: reader.h
scripts/: benchmarking.sh
src/: setup.h
src/controllers/: issuer.c  issuer.h  revocation-authority.c  revocation-authority.h  user.c  user.h  verifier.c  verifier.h
src/controllers/multos/: user.c  user.h
